Issue #2703497 by aramboyajyan: Create new view autocomplete field too long

--- a/css/style.css
+++ b/css/style.css
@@ -450,6 +450,12 @@ tables, in the same line as table heading. */
   padding-top: 0;
   padding-right: 0;
 }
+/* Reset the width of autocomplete fields within Views, so that they don't break
+the layout (e.g. on /admin/structure/views/add when you have a tagging field
+added to any content type). */
+.views-ui-ajax-wrapper input.fluid.form-autocomplete {
+  width: auto;
+}
 /* Views exposed filters forms. */
 div.views-exposed-form {
   margin-bottom: 20px;
